syntax = "proto3";

package proto;

option go_package = "/proto";

service Gate {
  rpc GetData(KeyData) returns (ValueData) {}
  rpc DeleteData(KeyData) returns (Result) {}
  rpc UpdateData(ClientData) returns (Result) {}
}

message KeyData {
  bytes Key = 1;
}

message ValueData {
  bytes Value = 1;
}

message Result {
  bool Success = 1;
}

message ClientData {
  bytes Key = 1;
  bytes Value = 2;
}